--- a/_posts/2024-11-15-2.md
+++ b/_posts/2024-11-15-2.md
@@ -24,29 +24,29 @@ words:
 >
 > **由于树链剖分代码较为冗长，本文所有代码均使用命名空间，`g` 代表邻接表，`hld` 代表树链剖分，`seg` 代表线段树**。
 
-## 关于树链剖分
+# 关于树链剖分
 
-### 是什么
+## 是什么
 
 顾名思义，将一个树剖分为多条链。
 
-### 为什么
+## 为什么
 
 这样可以将原本树上的一对多信息关系化为一对一的线性关系，便于维护。（详见下文）
 
-### 特点
+## 特点
 
 * 将树剖分为至多 $\mathcal O(\log n)$ 条链。
 * 每一条链上的 DFS 序均为连续的。
 
-### 作用
+## 作用
 
 * 修改 **树上两点之间的路径上** 所有点的值。
 * 查询 **树上两点之间的路径上** 节点权值的 **和/极值/其它（在序列上可以用数据结构维护，便于合并的信息）**。
 * 求解 LCA。
 * ......
 
-## 概念
+# 概念
 
 首先，我们要知道两个概念：
 
@@ -70,9 +70,9 @@ words:
 
 <div style="text-align: center;font-size: 12px;color: grey;">图片来源：<a href="https://oi-wiki.org/graph/hld/#%E9%87%8D%E9%93%BE%E5%89%96%E5%88%86">OI Wiki</a></div>
 
-## 实现（预处理）
+# 实现（预处理）
 
-### 所需信息
+## 所需信息
 
 我们需要知道什么呢？
 
@@ -85,7 +85,7 @@ words:
 * $x$ 在 DFS 序中的排名 $\textit{dfn}_x$，用处见后文；
 * DFS 序对应的节点编号 $\textit{rnk}_{\textit{dfn}_x}=x$，用处见后文；
 
-### 第一遍 DFS
+## 第一遍 DFS
 
 求出基本信息 $f_x,d_x,\textit{size}_x,\textit{son}_x$。
 
@@ -111,7 +111,7 @@ namespace hld{
 
 **注意不要在计算 $size_x$ 时漏掉了 $x$ 本身，这虽然可能对求解 $son_x$ 没有影响，但是会对后文维护子树信息有影响。**
 
-### 第二遍 DFS
+## 第二遍 DFS
 
 求解 $\textit{top}_x,\textit{dfn}_x,\textit{rnk}_x$。
 
@@ -146,11 +146,11 @@ void dfs2(int x,int topx){
 
 至此，树剖就已经完成了，接下来看应用。
 
-## 应用
+# 应用
 
 <div style="color: blue;text-align: center;font-size: 20px;"><a href="https://www.luogu.com.cn/problem/P3384"><b>例题：洛谷P3384</b></a></div>
 
-### 维护路径信息
+## 维护路径信息
 
 对应例题的操作 $1,2$。
 
@@ -206,7 +206,7 @@ int query(int u,int v){
 }
 ```
 
-### 维护子树信息
+## 维护子树信息
 
 对应例题的操作 $3,4$。
 
@@ -231,7 +231,7 @@ int query(int x){
 }
 ```
 
-### 求解 LCA 问题
+## 求解 LCA 问题
 
 其实和[维护路径信息](#维护路径信息)一模一样。
 
@@ -247,7 +247,7 @@ int lca(int u,int v){
 }
 ```
 
-## 例题 AC 代码
+# 例题 AC 代码
 
 ```cpp
 //#include<bits/stdc++.h>
@@ -435,3 +435,8 @@ int main(){
 }
 ```
 
+# 树剖复杂度证明
+
+即证明重链数量为 $\mathcal O(\log n)$ 条。
+
+因为重子节点的性质，跳一次轻边子树大小至少会**翻倍**。因此轻边至多有 $\mathcal O(\log n)$ 条，进而有重链有 $\mathcal O(\log n)$ 条。
