--- a/_posts/2024-12-31-1.md
+++ b/_posts/2024-12-31-1.md
@@ -712,3 +712,16 @@ shuffle(order.begin(),order.end(),Rand);
 * $-\infty$：`0x80`。
 
   `0xc0` 保证相加之后不会爆 `int`，实际为 $-1061109568\approx-10^9$。
+
+# 数据结构优化
+
+## 线段树
+
+### 线段树层数
+
+* 线段树的上 $5$ 层可以直接砍掉，因为很少，可以暴力遍历。
+* 线段树的下 $5$ 层可以直接砍掉，可以暴力维护信息。
+
+### 区间端点
+
+当维护信息较少时，不建议在结构体内维护区间端点，因为会破坏内存访问的连续性。
