--- a/_posts/2025-02-04-2.md
+++ b/_posts/2025-02-04-2.md
@@ -1791,6 +1791,104 @@ $$
 6. $\gcd(f_m,f_n)=f_{\gcd(m,n)}$。
 7. 以 $f_i,f_{i+1}$ 为输入会使欧几里得算法的复杂度达到最坏情况（具体参见[维基 - 拉梅](https://en.wikipedia.org/wiki/Gabriel_Lamé)）。
 
+其实可以推广到一些线性递推数列。对于一个序列 $f_n=af_{n-1}+bf_{n-2}$，若 $\gcd(a,b)=1,f_0=0,f_1=1$，则有：
+
+$$
+\gcd(f_i,f_j)=f_{\gcd(i,j)}
+$$
+
+<details class="note">
+    <summary>证明</summary>
+    <p>
+        构造转移矩阵：
+    </p>
+    <p>
+        $$
+        \begin{bmatrix}
+        a&b\\
+        1&0
+        \end{bmatrix}
+        \begin{bmatrix}
+        f_n\\
+        f_{n-1}
+        \end{bmatrix}
+        =
+        \begin{bmatrix}
+        f_{n+1}\\
+        f_n
+        \end{bmatrix}
+        $$
+    </p>
+    <p>
+        不妨令 $i&lt;j$，则有：
+    </p>
+    <p>
+    	$$
+        \begin{aligned}
+        \begin{bmatrix}
+        a&b\\
+        1&0
+        \end{bmatrix}^{j-i}
+        \begin{bmatrix}
+        f_i\\
+        f_{i-1}
+        \end{bmatrix}
+        &=
+        \begin{bmatrix}
+        f_{j+1}\\
+        f_j
+        \end{bmatrix}
+        \\
+        \begin{bmatrix}
+        f_{j-i+2}&f_{j-i+1}\\
+        f_{j-i+1}&f_{j-i}\\
+        \end{bmatrix}
+        \begin{bmatrix}
+        f_i\\
+        f_{i-1}
+        \end{bmatrix}
+        &=
+        \begin{bmatrix}
+        f_{j+1}\\
+        f_j
+        \end{bmatrix}
+        \end{aligned}
+        $$
+    </p>
+    <p>
+    	注意到：
+    </p>
+    <p>
+    	$$
+        f_j=f_{j-i+1}f_i+f_{j-i}f_{i-1}
+        $$
+    </p>
+    <p>
+    	则有：
+    </p>
+    <p>
+    	$$
+        \gcd(f_i,f_j)=\gcd(f_i,f_{j-i}f_{i-1})
+        $$
+    </p>
+    <p>
+    	数学归纳可得 $\gcd(f_i,f_{i-1})=1$，因此有：
+    </p>
+    <p>
+    	$$
+        \gcd(f_i,f_j)=\gcd(f_i,f_{j-i})
+        $$
+    </p>
+    <p>
+    	由辗转相减，最终得到：
+    </p>
+    <p>
+    	$$
+		\gcd(f_i,f_j)=f_{\gcd(i,j)}
+    	$$
+    </p>
+</details>
+
 ### 模意义下的周期性
 
 考虑模 $P$ 意义下斐波那契数列的周期性。
@@ -2504,6 +2602,35 @@ E\left(\operatorname*{kthmin}_{i\in S}x_i\right)&=\sum_{T\subseteq S}(-1)^{\vert
 $$
 
 kth Min-max 容斥常常配合期望、DP 出现。对于这种情况下的 DP 的转移方程，可以参考组合数递推公式。
+
+## gcd-lcm 容斥
+
+对于集合 $T$，有：
+
+$$
+\operatorname*{lcm}_{i\in T}i=\prod_{S\subseteq T}\left(\gcd_{i\in S}i\right)^{(-1)^{\vert S\vert-1}}
+$$
+
+将每一个质数分开考虑即可得出上述结论。对于质数 $p$：
+
+$$
+\begin{aligned}
+\operatorname{lcm}\left(p^a,p^b\right)&=p^{\max(a,b)}\\
+\gcd\left(p^a,p^b\right)&=p^{\min(a,b)}
+\end{aligned}
+$$
+
+套用 Min-max 容斥即可。
+
+> [P3598 Koishi Loves Number Theory](https://www.luogu.com.cn/problem/P3598)
+>
+> 对于常数 $x$，定义 $f(n)=\sum\limits_{i=0}^nx^i$。
+>
+> 给定 $n$ 和 $a_1,a_2,\cdots,a_n$，求 $\operatorname{lcm}(f(a_1),f(a_2),\cdots,f(a_n))$。
+>
+> ***
+>
+> [参见此处](/2025/8/14/2/)。
 
 ## 鸽巢原理
 
