--- a/_posts/2025-8-13-4.md
+++ b/_posts/2025-8-13-4.md
@@ -13,6 +13,7 @@ tags:
   - 长链剖分
   - DP
   - 基础算法
+  - 未完
 words:
   - "题解：P5903 【模板】树上 K 级祖先P5903 题解：树上 K 级祖先"
   - "题解：CF1009F Dominant Indices"
@@ -87,7 +88,7 @@ $$
 
 考虑如何 $\mathcal O(1)$ 继承重子节点信息。可以采用指针。具体而言，将 $x$ 的重子节点 $\textit{son}_x$ 的信息 $d_{\textit{son}_x,0},d_{\textit{son}_x,1},\cdots,d_{\textit{son}_x,k}$ 直接**映射**到 $d_{x,1},d_{x,2},\cdots,d_{x,k+1}$ 上即可。
 
-这样，每一条长链对应一组存储的 $d$，总空间复杂度为 $\mathcal O(n)$。时间复杂度也为 $\mathcal O(n)$。
+这样，每一条长链开一个空间对应一组存储的 $d$，总空间复杂度为 $\mathcal O(n)$。时间复杂度也为 $\mathcal O(n)$。
 
 同时需要时刻维护当前序列 $d$ 的最大值及其下标。
 
