--- a/_posts/2025-8-13-4.md
+++ b/_posts/2025-8-13-4.md
@@ -13,14 +13,13 @@ tags:
   - 长链剖分
   - DP
   - 基础算法
-  - 未完
 words:
   - "题解：P5903 【模板】树上 K 级祖先P5903 题解：树上 K 级祖先"
   - "题解：CF1009F Dominant Indices"
 ---
 
 > [参考资料](https://th911.dpdns.org/file/2025/08/ds.pdf)
-> 
+>
 > 例题：[P5903 树上 $k$ 级祖先](https://www.luogu.com.cn/problem/P5903)。
 >
 > 例题：[CF1009F Dominant Indices](https://www.luogu.com.cn/problem/CF1009F)。
@@ -67,6 +66,169 @@ words:
 >
 > 给定一棵 $n$ 个点的有根树，$q$ 次询问，每次询问点 $x$ 的 $k$ 级祖先。
 
+树上 $k$ 级祖先可以通过倍增做到 $\mathcal O(\log n)$ 查询，通过重链剖分配合预处理做到 $\mathcal O(\log\log n)$，重链剖分配合分块做到 $\mathcal O\left(\sqrt{\log n}\right)$。
+
+但是长链剖分可以做到 $\mathcal O(n\log n)$ 预处理，$\mathcal O(1)$ 查询。
+
+首先可以倍增预处理节点的 $2^i$ 级祖先。
+
+求 $x$ 的 $k$ 级祖先，找到一个 $2^i\leq k<2^{i+1}$，跳到 $x$ 的 $2^i$ 级祖先，令 $k\leftarrow k-2^i$。
+
+根据长链剖分的性质，此时有 $x$ 所在链的长度大于等于 $2^i$，进而大于等于 $k$。因此可以预处理链顶节点的 $l$ 级祖先和 $l$ 级重子节点，$l$ 表示链的长度。在预处理出来的结果上查询即可。
+
+<details class="note">
+    <summary>证明</summary>
+    <p>
+        注意到：如果 $x$ 所在链链顶节点 $\textit{top}_x$ 的父节点 $y$ 所在链长度一定大于 $x$ 所在链长度。
+    </p>
+    <p>
+        否则，$x,y$ 将会处于同一条链中。
+    </p>
+    <p>
+        若 $x$ 的 $k$ 级祖先处于同一条链中，正确性显然。
+    </p>
+    <p>
+        否则若处于链顶节点的父节点所处链中，则必然 $k$ 被划分为了两部分。父节点所处链的长度大于当前链长度，因此正确。
+    </p>
+    <p>
+        可以推广到跳了任意条。
+    </p>
+</details>
+
+**注意特判 $k=0$**。
+
+<details class="success">
+    <summary>参考代码</summary>
+
+```cpp
+//#include<bits/stdc++.h>
+#include<algorithm>
+#include<iostream>
+#include<cstring>
+#include<iomanip>
+#include<cstdio>
+#include<string>
+#include<vector>
+#include<cmath>
+#include<ctime>
+#include<deque>
+#include<queue>
+#include<stack>
+#include<list>
+using namespace std;
+typedef long long ll;
+constexpr const int N=5e5;
+namespace judge{
+	#define ui unsigned int
+	ui s;
+	
+	inline ui get(ui x) {
+		x ^= x << 13;
+		x ^= x >> 17;
+		x ^= x << 5;
+		return s = x; 
+	}
+	#undef ui
+}
+int n,root,depth[N+1],father[N+1][__lg(N+1)+1];
+vector<int>g[N+1];
+namespace hld{
+	int son[N+1],maxDepth[N+1],top[N+1],len[N+1];
+	void dfs1(int x){
+		depth[x]=depth[father[x][0]]+1;
+		maxDepth[x]=depth[x];
+		for(int i:g[x]){
+			if(i==father[x][0]){
+				continue;
+			}
+			dfs1(i);
+			maxDepth[x]=max(maxDepth[x],maxDepth[i]);
+			if(maxDepth[i]>maxDepth[son[x]]){
+				son[x]=i;
+			}
+		}
+	}
+	vector<int>up[N+1],down[N+1];
+	void dfs2(int x,int topx){ 
+		top[x]=topx;
+		if(son[x]){
+			dfs2(son[x],topx);
+		}
+		for(int i:g[x]){
+			if(i==father[x][0]||i==son[x]){
+				continue;
+			}
+			dfs2(i,i);
+		}
+		if(x==topx){
+			for(int y=x;son[y];y=son[y]){
+				down[x].push_back(y);
+			}
+			for(int i=1,y=x;i<=down[x].size();i++,y=father[y][0]){
+				up[x].push_back(y);
+			}
+		}
+	}
+	void pre(){
+		dfs1(root);
+		dfs2(root,root);
+		for(int i=1;(1<<i)<=n;i++){
+			for(int x=1;x<=n;x++){
+				father[x][i]=father[father[x][i-1]][i-1];
+			}
+		}
+	}
+	int query(int x,int k){
+		if(!k){
+			return x;
+		}
+		x=father[x][__lg(k)];
+		k-=1<<__lg(k);
+		k-=depth[x]-depth[top[x]];
+		x=top[x];
+		if(k>=0){
+			return up[x][k];
+		}else{
+			return down[x][-k];
+		}
+	}
+}
+int main(){
+	/*freopen("test.in","r",stdin);
+	freopen("test.out","w",stdout);*/
+	
+	ios::sync_with_stdio(false);
+	cin.tie(0);cout.tie(0);
+	
+	int q;
+	cin>>n>>q>>judge::s;
+	for(int i=1;i<=n;i++){
+		cin>>father[i][0];
+		if(!father[i][0]){
+			root=i;
+		}else{
+			g[father[i][0]].push_back(i);
+		}
+	}
+	hld::pre();
+	ll ans=0,last=0;
+	for(int i=1;i<=q;i++){
+		int x=(judge::get(judge::s)^last)%n+1;
+		int k=(judge::get(judge::s)^last)%depth[x];
+		last=hld::query(x,k);
+		ans^=1ll*i*last;
+	}
+	cout<<ans<<'\n';
+	
+	cout.flush();
+	
+	/*fclose(stdin);
+	fclose(stdout);*/
+	return 0;
+}
+```
+</details>
+
 
 
 ## 长链剖分优化 DP
@@ -88,7 +250,7 @@ $$
 
 考虑如何 $\mathcal O(1)$ 继承重子节点信息。可以采用指针。具体而言，将 $x$ 的重子节点 $\textit{son}_x$ 的信息 $d_{\textit{son}_x,0},d_{\textit{son}_x,1},\cdots,d_{\textit{son}_x,k}$ 直接**映射**到 $d_{x,1},d_{x,2},\cdots,d_{x,k+1}$ 上即可。
 
-这样，每一条长链开一个空间对应一组存储的 $d$，总空间复杂度为 $\mathcal O(n)$。时间复杂度也为 $\mathcal O(n)$。
+这样，每一条长链对应一组存储的 $d$，总空间复杂度为 $\mathcal O(n)$。时间复杂度也为 $\mathcal O(n)$。
 
 同时需要时刻维护当前序列 $d$ 的最大值及其下标。
 
