--- a/_posts/2025-8-15-3.md
+++ b/_posts/2025-8-15-3.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: "各类模板"
-subtitle: "矩阵乘法"
+subtitle: "矩阵乘法 Barrett 约减"
 date: 2025-8-15
 author: "TH911"
 header-img: "img/2024/10/006.jpeg"
@@ -94,5 +94,30 @@ Matrix& operator +=(Matrix &A,Matrix B){
 	}
 	return A;
 }
+```
+
+# Barrett 约减
+
+调用 `Barrett.build(P)` 更新模数为 `P`，调用 `Barrett(x)` 计算 `x%P`。
+
+支持 $\left[-2^{63},2^{63}\right)$ 内的整数取模，模数范围为 $[2,2^{31})$。
+
+```cpp
+typedef long long ll;
+typedef __int128 lll;
+struct Barrett{
+	ll p,m;
+	inline void build(int P){
+		p=P;
+		m=((lll)1<<64)/p;
+	}
+	inline ll operator ()(ll x){
+		ll ans=x-((lll)x*m>>64)*p;
+		if(ans>=p){
+			ans-=p;
+		}
+		return ans;
+	}
+}Barrett;
 ```
 
