--- a/_posts/2025-02-05-1.md
+++ b/_posts/2025-02-05-1.md
@@ -3082,6 +3082,23 @@ $$
 
 * 除数函数：$\sigma_k(n)=\sum\limits_{d\mid n}d^k$，$\sigma_0(n)$ 通常记作 $d(n)$ 或 $\tau(n)$，$\sigma_1(n)$ 通常记作 $\sigma(n)$。（`\sigma`）
 
+  <details class="note">
+      <summary>$d(n)$ 的求法</summary>
+      <p>
+          令 $n=p_1^{c_1}p_2^{c_2}\cdots p_k^{c_k}$，其中 $p_1,p_2,\cdots,p_k$ 均为质数。
+      </p>
+      <p>
+  对于每一个指数 $c_i$ 的更改，都会产生新的因数。每一个 $i$，都有 $c_i+1$ 种选择。显然有：
+      </p>
+      $$
+      d(n)=\prod_{i=1}^k(c_i+1)
+      $$
+      </p>
+      <p>
+          时间复杂度 $\mathcal O\left(\sqrt n\right)$。
+      </p>
+  </details>
+
 * 欧拉函数：$\varphi(n)$。（`\varphi`）
 
 * 莫比乌斯函数：
@@ -3096,6 +3113,24 @@ $$
   $$
   
   $\mu(n)=0$ 即 $n$ 含有平方因子。（`\mu`）
+
+同时，除数函数 $d(n)$ 即 $n$ 的因数个数，且 $d(ij)$ 满足：
+
+$$
+\begin{aligned}
+d(ij)&=\sum_{x\mid i}\sum_{y\mid j}[x\perp y]
+\end{aligned}
+$$
+
+<details class="note">
+    <summary>证明</summary>
+    <p>
+        令 $i=p_1^{c_1}p_2^{c_2}\cdots p_k^{c_k},j={p'_1}^{c'_1}{p'_2}^{c'_2}\cdots {p'_{k'}}^{c'_{k'}}$。如果将指数对位相加，则可以得到 $ij$ 的质因数分解形式。
+    </p>
+    <p>
+        将每一个质因子 $p_l$ 枚举 $c_l+c'_l+1$ 次，便可以得到全部的因数。因此枚举 $x\mid i,y\mid j$，但是需要保证 $x,y$ 不包含重复质因子，即 $x\perp y$。
+    </p>
+</details>
 
 ## 迪利克雷卷积
 
